<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".FacilityScreen"
    android:background="@drawable/app_background">

    <ImageView
        android:id="@+id/facility_icon"
        android:layout_width="122dp"
        android:layout_height="118dp"
        android:contentDescription="App Logo"
        android:src="@drawable/facility_icon"
        app:layout_constraintBottom_toTopOf="@+id/facilityNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />
    <ImageButton
        android:id="@+id/back"
        android:layout_width="12dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/vector"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_facility_button"
        android:layout_width="271dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="Edit Facility"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view_events_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_events_button"
        android:layout_width="271dp"
        android:layout_height="70dp"
        android:background="@drawable/white_rounded_button"
        android:text="View Events"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/create_event_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_event_button"
        android:layout_width="271dp"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/white_rounded_button"
        android:text="Create Event"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Profile"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/facility_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/facilityNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Name"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/facilityAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/facilityAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Address"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/facilityDescText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/facilityDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Description"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_facility_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_nav"
        android:fadeScrollbars="false"
        android:paddingTop="2dp"
        app:backgroundTint="#EEFFFFFF"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>