<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFacilityScreen"
    android:background="@drawable/app_background">

    <ImageView
        android:id="@+id/facility_icon"
        android:layout_width="122dp"
        android:layout_height="118dp"
        android:contentDescription="App Logo"
        android:src="@drawable/facility_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />
    <ImageButton
        android:id="@+id/back"
        android:layout_width="12dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/vector"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_edit_facility_button"
        android:layout_width="271dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="Confirm"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_desc"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Profile"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/facility_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <!-- https://stackoverflow.com/questions/59246328/android-add-a-padding-with-size-that-looks-equal-on-all-devices, 2024-10-21 -->
    <!--
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="TEXT"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>
    -->

    <TextView
        android:id="@+id/facility_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Name"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_facility_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility_icon"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/edit_facility_name"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/facility_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Address"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_facility_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_name"
        app:layout_constraintVertical_bias="0.577" />

    <EditText
        android:id="@+id/edit_facility_address"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/facility_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <TextView
        android:id="@+id/facility_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facility Description"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <EditText
        android:id="@+id/edit_facility_desc"
        android:layout_width="271dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_border"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility_desc_text"
        app:layout_constraintVertical_bias="0.073" />


</androidx.constraintlayout.widget.ConstraintLayout>