...
        app:layout_constraintBottom_toTopOf="@+id/lightdarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <View
        android:id="@+id/app_info"
        android:layout_width="382dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintStart_toStartOf="@+id/app_info"
        app:layout_constraintTop_toTopOf="@+id/app_info"
        app:srcCompat="@drawable/calendar_image" />


    <View
        android:id="@+id/admin_privileges_view"
        android:layout_width="382dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
...
